--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
   </head>
   <body>
     <a-scene background="color: #FAFAFA">
-<!--       <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" shadow></a-box> -->
+      <a-assets>
+        <audio id="alice" src="./alice.mp3"></audio>
+      </a-assets>
       <a-sphere position="0 1.25 -3" radius="1" color="#EF2D5E" shadow></a-sphere>
-<!--       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder> -->
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
-      <a-entity id="river" geometry="primitive: plane" material="color: blue" position="-10 0 0" 
-                sound="src: url(assets/; 
-                       autoplay: true"></a-entity>
+      <a-entity id="alicesound" sound="src: #alice; autoplay: true; loop: true"></a-entity>
     </a-scene>
   </body>
 </html>
