book model added?

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <a-scene background="color: #FAFAFA">
       <a-assets>
         <audio id="alice" src="./alice.mp3"></audio>
+        <a-asset-item id="book" src="./scene.gltf"></a-asset-item>
       </a-assets>
       <a-sphere position="0 1.25 -3" radius="1" color="#EF2D5E" shadow></a-sphere>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
       <a-entity id="alicesound" sound="src: #alice; autoplay: true; loop: true"></a-entity>
+      <a-entity id="alicebook" gltf-model="#book"></a-entity>
     </a-scene>
   </body>
 </html>
