adjust position book

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a-sphere position="0 1.25 -3" radius="1" color="#EF2D5E" shadow></a-sphere>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
       <a-entity id="alicesound" sound="src: #alice; autoplay: true; loop: true"></a-entity>
-      <a-entity id="alicebook" gltf-model="#book"></a-entity>
+      <a-entity id="alicebook" gltf-model="#book" position="0 0 -4"></a-entity>
     </a-scene>
   </body>
 </html>
