--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
         <audio id="alice" src="./alice.mp3"></audio>
         <a-asset-item id="book" src="./scene.gltf"></a-asset-item>
       </a-assets>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="blue" shadow></a-plane>
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#2e8ac7" shadow></a-plane>
       <a-light type="ambient" color="#red"></a-light>
       <a-light type="point" color="#blue" position="-2 2 2"></a-light>
       <a-entity id="alicesound" sound="src: #alice; autoplay: true; loop: true"></a-entity>
-      <a-entity id="alicebook" gltf-model="#book" position="0 0 -4" scale="0.25 0.25 0.25" rotation="0 90 0">
-        <a-animation attribute="rotation" to="0 90 360" repeat="indefinite" dur="6000" easing="linear"></a-animation>
-        <a-animation attribute="position" to="0 2 -4" from="0 0 -4" repeat="indefinite" direction="alternate" dur="6000" easing="linear"></a-animation>
+      <a-entity id="alicebook" gltf-model="#book" position="0 0 -4" scale="0.25 0.25 0.25" rotation="0 90 0"
+        animation="property: rotation; to: 0 90 360; repeat: indefinite; dur: 6000; easing: linear"
+        animation__2="property: position; to: 0 2 -4; from: 0 0 -4; repeat: indefinite; direction: alternate; dur: 6000; easing=linear"
+        >
       </a-entity>
     </a-scene>
   </body>
