--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <a-light type="point" color="#blue" position="-2 2 2"></a-light>
       <a-entity id="alicesound" sound="src: #alice; autoplay: true; loop: true"></a-entity>
       <a-entity id="alicebook" gltf-model="#book" position="0 0 -4" scale="0.25 0.25 0.25" rotation="0 90 0"
-        animation="property: rotation; to: 0 90 360; repeat: indefinite; dur: 6000; easing: linear"
-        animation__2="property: position; to: 0 2 -4; from: 0 0 -4; repeat: indefinite; direction: alternate; dur: 6000; easing=linear"
+        animation__1="property: rotation; to: 360 90 0; loop: true; dur: 6000; easing: linear"
+        animation__2="property: position; to: 0 2 -4; from: 0 0 -4; loop: true; direction: alternate; dur: 6000; easing=linear"
         >
       </a-entity>
     </a-scene>
