--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       </a-entity>
       <a-entity id="alicesound" sound="src: #alice; autoplay: true; loop: true"></a-entity>
       <a-entity id="alicebook" gltf-model="#book" position="0 0 -4" scale="0.25 0.25 0.25" rotation="0 90 0"
-        animation__1="property: rotation; to: 0 360 0; loop: true; dur: 6000; easing: linear"
-        animation__2="property: position; to: 0 2 -4; from: 0 0 -4; loop: true; direction: alternate; dur: 6000; easing=linear"
+        animation__1="property: rotation; to: 0 -450 0; loop: true; dur: 6000; easing: linear"
+        animation="property: position; to: 0 2 -4; from: 0 0 -4; loop: true; dir: alternate; dur: 6000; easing=linear"
         >
       </a-entity>
     </a-scene>
