--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </a-assets>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#2e8ac7" shadow></a-plane>
       <a-light type="ambient" color="#red"></a-light>
-      <a-light type="point" color="#blue" position="-2 2 2"></a-light>
+      <a-light type="point" color="#red" position="-2 2 2"></a-light>
       <a-entity position="0 0 0">
         <a-camera></a-camera>
       </a-entity>
